samples/_failures_safe/1761317727_04de1e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_67d650bd.c: In function ‘main’:
./samples/SAFE/__tmp_67d650bd.c:150:5: error: expected declaration or statement at end of input
  150 |     matrix_print(&result, "A^T");
      |     ^~~~~~~~~~~~
